# MLOPS_MLFactory

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  sphinx-reading-durations.json
.github/workflows/: cd.yml  ci.yml
data/: iris_test.csv
docs/source/: api.rst  architecture.md  conf.py  index.rst  train.rst
src/api/: main.py
src/front/: app.py
src/train/: train.py
